wisecow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: wisecow-app:latest
        ports:
        - containerPort: 4499
        livenessProbe:
          httpGet:
            path: /
            port: 4499
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /
            port: 4499
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
