data-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data
  labels:
    app.kubernetes.io/name: data
spec:
  selector:
    app.kubernetes.io/name: data
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
